--- a/data/main.ui
+++ b/data/main.ui
@@ -54,6 +54,20 @@
         </property>
        </spacer>
       </item>
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout_3">
+        <item>
+         <widget class="QLineEdit" name="finder_line"/>
+        </item>
+        <item>
+         <widget class="QPushButton" name="finder_button">
+          <property name="text">
+           <string>Искать</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
      </layout>
     </item>
    </layout>
